# benchmark-my-code

./: .gitignore  ADR-007-Scenario-Discovery.md  ADR.md  AGENTS.md  GEMINI.md  PLANS.md  README.md  diff.txt  pyproject.toml  repro_check.py
.github/workflows/: build.yml  publish.yml
_bmad/: config.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 2-1-the-benchit-cli-runner-discovery.md  4-1-adaptive-hardware-aware-timeouts.md  4-2-staged-pedagogical-hint-engine.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-04-26.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
benchmark_my_code/: __init__.py  api.py  cli.py  config.py  exceptions.py  model.py  orchestrator.py  result.py
demos/: simple.py  sum_of_digits.py
docs/: api-contracts.md  architecture.md  data-models.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
examples/: 01_single_function.py  02_one_of_many.py  03_compare_implementations.py  04_challenge_mode.py
plans/: 01-uv-migration.md  02a-core-statistics.md  02b-batch-execution.md  02c-adhoc-mode.md  02d-pluggable-output.md  03a-challenge-api.md  03b-adaptive-timeouts.md  03c-pedagogical-feedback.md  03d-adaptive-memory.md  aica_setup.md  documentation_update.md  phase_2_planning.md  phase_3_planning.md
tests/: cli_test_case.py  conftest.py  repro_2_2_issues.py  repro_2_3.py  test_adaptive_timeouts.py  test_adaptive_timeouts_hardened.py  test_api_adhoc.py  test_api_adhoc_advanced.py  test_challenge_advanced.py  test_challenge_api.py  test_cli.py  test_cli_discovery_internal.py  test_cli_side_effects.py  test_efficient_median.py  test_memory_profiling.py  test_model_statistics.py  test_output.py  test_patches_review.py  test_pedagogical_feedback.py  test_simple_execution.py  test_worker_stall.py
