[project]
name = "benchmark-my-code"
version = "0.0.1"
description = "A simple, even if not the most efficient, way to benchmark code for educational purposes."
authors = [
    { name = "Michał Poręba", email = "michalporeba@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark_my_code"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
