[project]
name = "benchmark-my-code"
version = "0.2.0"
description = "A simple, even if not the most efficient, way to benchmark code for educational purposes."
authors = [
    { name = "Michał Poręba", email = "michalporeba@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
benchit = "benchmark_my_code.cli:main"

[project.urls]
Homepage = "https://github.com/michalporeba/benchmark-my-code"
Repository = "https://github.com/michalporeba/benchmark-my-code"
Issues = "https://github.com/michalporeba/benchmark-my-code/issues"

[project.optional-dependencies]
cli = ["rich>=13.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark_my_code"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
